argo/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    prometheus.io/scrape: "true"
    #ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  tls:
  - hosts:
    - argo.eeo.im
    secretName: tls-eeo-im
  rules:
    - host: argo.eeo.im
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            #path: /argo(/|$)(.*)
            path: /
            pathType: Prefix
